<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thomassnow.xmastree.ui.MQTTSetupActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textEffectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mqtt_broker_host" />

    <EditText
        android:id="@+id/editMQTTHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textEffectLabel"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textEffectLabel"
        android:layout_below="@+id/editMQTTHost"
        android:text="@string/mqtt_broker_port"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editMQTTPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editMQTTHost"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/editMQTTPort"
        android:text="@string/user_name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editMQTTUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editMQTTPort"
        android:layout_alignRight="@+id/editMQTTPort"
        android:layout_alignTop="@+id/textView3"
        android:ems="10" />

    <EditText
        android:id="@+id/editMQTTPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editMQTTUserName"
        android:layout_alignRight="@+id/editMQTTUserName"
        android:layout_below="@+id/editMQTTUserName"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editMQTTPassword"
        android:layout_alignBottom="@+id/editMQTTPassword"
        android:layout_alignLeft="@+id/textView3"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonMQTTSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMQTTPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/save_button" />

</RelativeLayout>