<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.thomassnow.xmastree"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thomassnow.xmastree.ColorPickerActivity$PlaceholderFragment" >

    <com.thomassnow.xmastree.ui.views.ColorView
        android:id="@+id/colorPicked"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/colormap_margin"
        android:layout_marginLeft="@dimen/colormap_margin"
        android:layout_marginRight="@dimen/colormap_margin"
        android:layout_marginTop="@dimen/colormap_margin"
        custom:color="@color/orange" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/colorPicked"
        android:columnCount="3"
        android:rowCount="4" >

        <TextView
            android:id="@+id/promptRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/promptRed"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.thomassnow.xmastree.ui.views.VerticalSeekBar
            android:id="@+id/seekRed"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center"
            android:max="@integer/intColor" />

        <TextView
            android:id="@+id/promptGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center"
            android:text="@string/promptGreen"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.thomassnow.xmastree.ui.views.VerticalSeekBar
            android:id="@+id/seekGreen"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="center"
            android:max="@integer/intColor" />


        <TextView
            android:id="@+id/promptBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/promptBlue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.thomassnow.xmastree.ui.views.VerticalSeekBar
            android:id="@+id/seekBlue"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_gravity="center"
            android:max="@integer/intColor" />

        <CheckBox
            android:id="@+id/checkActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnSpan="3"
            android:text="@string/promptActive"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Button
            android:id="@+id/buttonOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnSpan="3"
            android:text="@string/promptOK"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        </GridLayout>

</RelativeLayout>